--- a/demo/src/components/ChatWindow/lib/Room/RoomHeader/RoomHeader.scss
+++ b/demo/src/components/ChatWindow/lib/Room/RoomHeader/RoomHeader.scss
@@ -8,6 +8,7 @@
 	margin-right: 1px;
 	background: var(--chat-header-bg-color);
 	border-top-right-radius: var(--chat-container-border-radius);
+	border-top-left-radius: var(--chat-container-border-radius);
 
 	.vac-room-wrapper {
 		display: flex;
