--- a/src/components/FormatMessage/FormatMessage.scss
+++ b/src/components/FormatMessage/FormatMessage.scss
@@ -1,4 +1,8 @@
 .vac-format-message-wrapper {
+	.vac-format-container {
+		display: inline;
+	}
+
 	.vac-icon-deleted {
 		height: 14px;
 		width: 14px;
