--- a/src/components/SvgIcon/SvgIcon.scss
+++ b/src/components/SvgIcon/SvgIcon.scss
@@ -34,6 +34,10 @@
 	fill: var(--chat-icon-color-close-outline);
 }
 
+#vac-icon-close-outline-preview {
+	fill: var(--chat-icon-color-close-preview);
+}
+
 #vac-icon-send {
 	fill: var(--chat-icon-color-send);
 }
