--- a/src/lib/Message/MessageReply/MessageReply.scss
+++ b/src/lib/Message/MessageReply/MessageReply.scss
@@ -34,4 +34,9 @@
 		font-size: 12px;
 		color: var(--chat-message-color-reply-content);
 	}
+
+	.vac-file-container {
+		height: 60px;
+		width: 60px;
+	}
 }
