--- a/src/lib/ChatWindow.scss
+++ b/src/lib/ChatWindow.scss
@@ -1,59 +1,58 @@
 .vac-card-window {
-  width: 100%;
-  display: block;
-  max-width: 100%;
-  background: var(--chat-content-bg-color);
-  color: var(--chat-color);
-  overflow-wrap: break-word;
-  position: relative;
-  white-space: normal;
-  border: var(--chat-container-border);
-  border-radius: var(--chat-container-border-radius);
-  box-shadow: var(--chat-container-box-shadow);
-  -webkit-tap-highlight-color: transparent;
+	width: 100%;
+	display: block;
+	max-width: 100%;
+	background: var(--chat-content-bg-color);
+	color: var(--chat-color);
+	overflow-wrap: break-word;
+	white-space: normal;
+	border: var(--chat-container-border);
+	border-radius: var(--chat-container-border-radius);
+	box-shadow: var(--chat-container-box-shadow);
+	-webkit-tap-highlight-color: transparent;
 
-  * {
-    font-family: inherit;
-  }
+	* {
+		font-family: inherit;
+	}
 
-  a {
-    color: #0d579c;
-    font-weight: 500;
-  }
+	a {
+		color: #0d579c;
+		font-weight: 500;
+	}
 
-  .vac-chat-container {
-    height: 100%;
-    display: flex;
+	.vac-chat-container {
+		height: 100%;
+		display: flex;
 
-    input {
-      min-width: 10px;
-    }
+		input {
+			min-width: 10px;
+		}
 
-    textarea,
-    input[type="text"],
-    input[type="search"] {
-      -webkit-appearance: none;
-    }
-  }
+		textarea,
+		input[type='text'],
+		input[type='search'] {
+			-webkit-appearance: none;
+		}
+	}
 
-  .vac-image-preview {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: var(--chat-message-bg-color-media);
-    z-index: 15;
+	.vac-image-preview {
+		position: absolute;
+		display: flex;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		top: 0;
+		background: var(--chat-message-bg-color-media);
+		z-index: 15;
 
-    .vac-image {
-      width: 94%;
-      height: 94%;
-      background-image: url(http://localhost:9081/api/mc/files/28);
-      margin: auto;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-  }
+		.vac-image {
+			width: 94%;
+			height: 94%;
+			background-image: url(http://localhost:9081/api/mc/files/28);
+			margin: auto;
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
+	}
 }
