--- a/src/lib/Room/RoomEmojis/RoomEmojis.scss
+++ b/src/lib/Room/RoomEmojis/RoomEmojis.scss
@@ -1,5 +1,4 @@
 .vac-emojis-container {
-	position: absolute;
 	width: calc(100% - 16px);
 	padding: 10px 8px;
 	background: var(--chat-footer-bg-color);
@@ -12,15 +11,12 @@
 		font-size: 30px;
 		border-radius: 4px;
 		cursor: pointer;
+		background: var(--chat-footer-bg-color-tag);
+		transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+	}
 
-		&:hover {
-			background: var(--chat-footer-bg-color-tag-active);
-			transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
-		}
-
-		&:not(:hover) {
-			transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
-		}
+	.vac-emoji-element-active {
+		background: var(--chat-footer-bg-color-tag-active);
 	}
 }
 
