--- a/src/lib/Room/RoomUsersTag/RoomUsersTag.scss
+++ b/src/lib/Room/RoomUsersTag/RoomUsersTag.scss
@@ -1,5 +1,4 @@
 .vac-tags-container {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -11,16 +10,12 @@
 		height: 54px;
 		overflow: hidden;
 		cursor: pointer;
-		background: var(--chat-footer-bg-color);
+		background: var(--chat-footer-bg-color-tag);
+		transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+	}
 
-		&:hover {
-			background: var(--chat-footer-bg-color-tag-active);
-			transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
-		}
-
-		&:not(:hover) {
-			transition: background-color 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
-		}
+	.vac-tags-box-active {
+		background: var(--chat-footer-bg-color-tag-active);
 	}
 
 	.vac-tags-info {
