--- a/demo-laravel/resources/js/ChatWindow/lib/RoomsList/RoomContent/RoomContent.scss
+++ b/demo-laravel/resources/js/ChatWindow/lib/RoomsList/RoomContent/RoomContent.scss
@@ -45,6 +45,7 @@
 		font-size: 12px;
 		line-height: 19px;
 		color: var(--chat-room-color-message);
+		text-align: left;
 	}
 
 	.vac-message-new {
