--- a/src/lib/Room/Room.scss
+++ b/src/lib/Room/Room.scss
@@ -32,6 +32,7 @@
 		background: var(--chat-content-bg-color);
 		flex: 1;
 		overflow-y: auto;
+		overflow-x: hidden;
 		margin-right: 1px;
 		margin-top: 60px;
 		-webkit-overflow-scrolling: touch;
