--- a/src/styles/helper.scss
+++ b/src/styles/helper.scss
@@ -15,6 +15,7 @@
 }
 
 .vac-app-box-shadow {
+	transition: all 0.5s;
 	box-shadow: 0 2px 2px -4px rgba(0, 0, 0, 0.1),
 		0 2px 2px 1px rgba(0, 0, 0, 0.12), 0 1px 8px 1px rgba(0, 0, 0, 0.12);
 }
@@ -39,24 +40,27 @@
 	display: flex;
 	cursor: pointer;
 	transition: all 0.2s;
-}
 
-.vac-svg-button:hover {
-	transform: scale(1.1);
-	opacity: 0.7;
+	&:hover {
+		transform: scale(1.1);
+		opacity: 0.7;
+	}
 }
 
 .vac-avatar {
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-color: #ddd;
 	height: 42px;
 	width: 42px;
 	min-height: 42px;
 	min-width: 42px;
 	margin-right: 15px;
 	border-radius: 50%;
+}
+
+.vac-blur-loading {
+	filter: blur(3px);
 }
 
 .vac-badge-counter {
@@ -120,4 +124,36 @@
 .vac-text-tag {
 	color: var(--chat-message-color-tag);
 	cursor: pointer;
+}
+
+.vac-file-container {
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	flex-wrap: nowrap;
+	text-align: center;
+	align-items: center;
+	background: var(--chat-bg-color-input);
+	border: var(--chat-border-style-input);
+	border-radius: 4px;
+	padding: 10px;
+
+	svg {
+		height: 28px;
+		width: 28px;
+		margin-right: 5px;
+	}
+
+	.vac-text-extension {
+		font-size: 12px;
+		color: var(--chat-message-color-file-extension);
+		margin-top: -2px;
+	}
+
+	.vac-file-size {
+		width: 100%;
+		font-size: 0.6rem;
+		color: var(--chat-message-color-file-size);
+		text-align: right;
+	}
 }
